# codecrafters-interpreter-c

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.lox  your_program.sh
src/: main.c
src/cli/: cli.c  cli.h  file.c  file.h  printers.c  printers.h
src/lox/: environment.c  environment.h  error.c  error.h  expr.c  expr.h  interpreter.c  interpreter.h  parser.c  parser.h  scanner.c  scanner.h  stmt.c  stmt.h  token.c  token.h  value.c  value.h
src/utils/: bst.h  bts.c  common.h  error.c  error.h  list.c  list.h  mem.c  mem.h  panic.h  slice.h  vec.h
